# LLM-Context-Transfer-Language

./: .gitignore  BUG_REPORT.md  CLAUDE.md  CODEBASE_REVIEW_REPORT.md  LICENSE  LLM-CONTEXT-TRANSFER.md  README.md  debug_sk.py  pyproject.toml  task.md
benchmarks/: __init__.py  bench_analysis.py  bench_events.py  bench_replay.py  fixtures.py  run_benchmarks.py
docs/: api.md
docs/tutorials/: autogen-tutorial.md  crewai-tutorial.md  dspy-tutorial.md  langchain-tutorial.md  llamaindex-tutorial.md  openai-agents-tutorial.md  pydantic-ai-tutorial.md  semantic-kernel-tutorial.md
examples/: autogen_example.py  crewai_example.py  dspy_example.py  langchain_example.py  llamaindex_example.py  openai_agent.py  openai_agents_example.py  pydantic_ai_agent.py  sample-chain.lctl.json  semantic_kernel_agent.py
lctl/: __init__.py
lctl/cli/: __init__.py  main.py
lctl/core/: __init__.py  events.py  schema.py  session.py
lctl/dashboard/: __init__.py  app.py
lctl/dashboard/static/: app.js  styles.css
lctl/dashboard/templates/: index.html
lctl/evaluation/: __init__.py  comparator.py  metrics.py  statistical.py
lctl/integrations/: __init__.py  autogen.py  base.py  claude_code.py  crewai.py  dspy.py  langchain.py  llamaindex.py  openai_agents.py  pydantic_ai.py  semantic_kernel.py
lctl/metrics/: __init__.py  aggregators.py  collectors.py  exporters.py
lctl/streaming/: __init__.py  emitter.py  subscriber.py  websocket.py
tests/: conftest.py  test_autogen.py  test_autogen_modern.py  test_cli.py  test_crewai.py  test_crewai_async.py  test_crewai_llm_trace.py  test_dashboard.py  test_dashboard_rpa.py  test_dspy.py  test_evaluation.py  test_events.py  test_init.py  test_integration_base.py  test_langchain.py  test_llamaindex.py  test_lru_cache.py  test_metrics.py  test_openai_agents.py  test_pydantic_ai.py  test_pydantic_ai_llm_trace.py  test_pydantic_ai_stream.py  test_schema.py  test_semantic_kernel.py  test_session.py  test_sk_stream.py  test_streaming.py  test_websocket_comprehensive.py
vscode-lctl/: .vscodeignore  MANUAL.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-lctl/src/: chainProvider.ts  commands.ts  extension.ts  webviewPanel.ts
vscode-lctl/webview-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.js.map  vite.config.ts
vscode-lctl/webview-ui/src/: App.tsx  store.ts  types.ts
vscode-lctl/webview-ui/src/components/: Breadcrumb.tsx  CodeLinks.tsx  DiffPanel.tsx  EventDetails.tsx  FilterPanel.tsx  Header.tsx  Minimap.tsx  (+4 more)
(+2 files in other folders)
